// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EdgeStack prod matches the snapshot 1`] = `
{
  "Outputs": {
    "DistributionDomainName": {
      "Description": "SPS CloudFront distribution domain (*.cloudfront.net)",
      "Value": {
        "Fn::GetAtt": [
          "Distribution830FAC52",
          "DomainName",
        ],
      },
    },
    "DistributionId": {
      "Description": "SPS CloudFront distribution id",
      "Value": {
        "Ref": "Distribution830FAC52",
      },
    },
    "LogsBucketName": {
      "Description": "SPS CloudFront access logs bucket",
      "Value": {
        "Ref": "LogsBucket9C4D8843",
      },
    },
    "StaticAssetsBucketName": {
      "Description": "SPS static-asset bucket (/_next/static/*) for additive deploy sync",
      "Value": {
        "Ref": "StaticAssetsBucketC3095769",
      },
    },
  },
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "DefaultRscCacheCFC4DDE6": {
      "Properties": {
        "CachePolicyConfig": {
          "Comment": "SPS default cache (prod) -- Managed-CachingOptimized plus RSC header keying so App Router soft navigation works.",
          "DefaultTTL": 60,
          "MaxTTL": 60,
          "MinTTL": 0,
          "Name": "sps-default-rsc-prod",
          "ParametersInCacheKeyAndForwardedToOrigin": {
            "CookiesConfig": {
              "CookieBehavior": "none",
            },
            "EnableAcceptEncodingBrotli": true,
            "EnableAcceptEncodingGzip": true,
            "HeadersConfig": {
              "HeaderBehavior": "whitelist",
              "Headers": [
                "RSC",
                "Next-Router-Prefetch",
              ],
            },
            "QueryStringsConfig": {
              "QueryStringBehavior": "none",
            },
          },
        },
      },
      "Type": "AWS::CloudFront::CachePolicy",
    },
    "Distribution830FAC52": {
      "Properties": {
        "DistributionConfig": {
          "CacheBehaviors": [
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
              ],
              "CachePolicyId": "658327ea-f89d-4fab-a63d-7e88639e58f6",
              "Compress": true,
              "PathPattern": "/_next/static/*",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgeprodDistributionOriginGroup145A7C8F1",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
                "PUT",
                "PATCH",
                "POST",
                "DELETE",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": "216adef6-5c7f-47e4-b989-5492eafa07d3",
              "PathPattern": "/api/edit*",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgeprodDistributionOrigin13FA7C7AF",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
                "PUT",
                "PATCH",
                "POST",
                "DELETE",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": "216adef6-5c7f-47e4-b989-5492eafa07d3",
              "PathPattern": "/api/impersonation*",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgeprodDistributionOrigin13FA7C7AF",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": "216adef6-5c7f-47e4-b989-5492eafa07d3",
              "PathPattern": "/edit*",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgeprodDistributionOrigin13FA7C7AF",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
                "PUT",
                "PATCH",
                "POST",
                "DELETE",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": "216adef6-5c7f-47e4-b989-5492eafa07d3",
              "PathPattern": "/api/auth/*",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgeprodDistributionOrigin13FA7C7AF",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
                "PUT",
                "PATCH",
                "POST",
                "DELETE",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": "216adef6-5c7f-47e4-b989-5492eafa07d3",
              "PathPattern": "/api/revalidate*",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgeprodDistributionOrigin13FA7C7AF",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": "216adef6-5c7f-47e4-b989-5492eafa07d3",
              "PathPattern": "/api/health/*",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgeprodDistributionOrigin13FA7C7AF",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
                "PUT",
                "PATCH",
                "POST",
                "DELETE",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": "216adef6-5c7f-47e4-b989-5492eafa07d3",
              "PathPattern": "/api/analytics",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgeprodDistributionOrigin13FA7C7AF",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
                "PUT",
                "PATCH",
                "POST",
                "DELETE",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": {
                "Ref": "InternalViewerOrp246E9A2E",
              },
              "PathPattern": "/api/export/*",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgeprodDistributionOrigin13FA7C7AF",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
                "PUT",
                "PATCH",
                "POST",
                "DELETE",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": "216adef6-5c7f-47e4-b989-5492eafa07d3",
              "PathPattern": "/api/csp-report",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgeprodDistributionOrigin13FA7C7AF",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
                "PUT",
                "PATCH",
                "POST",
                "DELETE",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": "216adef6-5c7f-47e4-b989-5492eafa07d3",
              "PathPattern": "/api/nih-resolve",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgeprodDistributionOrigin13FA7C7AF",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
                "PUT",
                "PATCH",
                "POST",
                "DELETE",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": "216adef6-5c7f-47e4-b989-5492eafa07d3",
              "PathPattern": "/api/feedback/submit",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgeprodDistributionOrigin13FA7C7AF",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": "216adef6-5c7f-47e4-b989-5492eafa07d3",
              "PathPattern": "/api/search*",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgeprodDistributionOrigin13FA7C7AF",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": "216adef6-5c7f-47e4-b989-5492eafa07d3",
              "PathPattern": "/search*",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgeprodDistributionOrigin13FA7C7AF",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": "216adef6-5c7f-47e4-b989-5492eafa07d3",
              "PathPattern": "/api/directory/people",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgeprodDistributionOrigin13FA7C7AF",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": "216adef6-5c7f-47e4-b989-5492eafa07d3",
              "PathPattern": "/api/nih-portfolio",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgeprodDistributionOrigin13FA7C7AF",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": "216adef6-5c7f-47e4-b989-5492eafa07d3",
              "PathPattern": "/api/scholars/*/popover-context",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgeprodDistributionOrigin13FA7C7AF",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": "216adef6-5c7f-47e4-b989-5492eafa07d3",
              "PathPattern": "/api/topics/*/publications",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgeprodDistributionOrigin13FA7C7AF",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": "216adef6-5c7f-47e4-b989-5492eafa07d3",
              "PathPattern": "/api/methods/*/*/publications",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgeprodDistributionOrigin13FA7C7AF",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": {
                "Ref": "InternalViewerOrp246E9A2E",
              },
              "PathPattern": "/api/profile/*",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgeprodDistributionOrigin13FA7C7AF",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": "216adef6-5c7f-47e4-b989-5492eafa07d3",
              "PathPattern": "/about/feedback",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgeprodDistributionOrigin13FA7C7AF",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": "216adef6-5c7f-47e4-b989-5492eafa07d3",
              "PathPattern": "/scholars/*/co-pubs/export",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgeprodDistributionOrigin13FA7C7AF",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": "216adef6-5c7f-47e4-b989-5492eafa07d3",
              "PathPattern": "/scholars/*/co-pubs/*/export",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgeprodDistributionOrigin13FA7C7AF",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
              ],
              "CachePolicyId": {
                "Ref": "QueryKeyedCacheF5F61D4E",
              },
              "Compress": true,
              "PathPattern": "/scholars/*",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgeprodDistributionOrigin13FA7C7AF",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
              ],
              "CachePolicyId": {
                "Ref": "QueryKeyedCacheF5F61D4E",
              },
              "Compress": true,
              "PathPattern": "/departments/*",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgeprodDistributionOrigin13FA7C7AF",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
              ],
              "CachePolicyId": {
                "Ref": "QueryKeyedCacheF5F61D4E",
              },
              "Compress": true,
              "PathPattern": "/centers/*",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgeprodDistributionOrigin13FA7C7AF",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
              ],
              "CachePolicyId": {
                "Ref": "QueryKeyedCacheF5F61D4E",
              },
              "Compress": true,
              "PathPattern": "/topics/*/scholars",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgeprodDistributionOrigin13FA7C7AF",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
              ],
              "CachePolicyId": {
                "Ref": "QueryKeyedCacheF5F61D4E",
              },
              "Compress": true,
              "PathPattern": "/methods/*/*/scholars",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgeprodDistributionOrigin13FA7C7AF",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
          ],
          "Comment": "SPS edge -- prod",
          "CustomErrorResponses": [
            {
              "ErrorCachingMinTTL": 60,
              "ErrorCode": 404,
            },
            {
              "ErrorCachingMinTTL": 0,
              "ErrorCode": 500,
            },
            {
              "ErrorCachingMinTTL": 0,
              "ErrorCode": 502,
            },
            {
              "ErrorCachingMinTTL": 0,
              "ErrorCode": 503,
            },
            {
              "ErrorCachingMinTTL": 0,
              "ErrorCode": 504,
            },
          ],
          "DefaultCacheBehavior": {
            "AllowedMethods": [
              "GET",
              "HEAD",
              "OPTIONS",
            ],
            "CachePolicyId": {
              "Ref": "DefaultRscCacheCFC4DDE6",
            },
            "Compress": true,
            "ResponseHeadersPolicyId": {
              "Ref": "HtmlHeadersD748949D",
            },
            "TargetOriginId": "SpsEdgeprodDistributionOrigin13FA7C7AF",
            "ViewerProtocolPolicy": "redirect-to-https",
          },
          "Enabled": true,
          "HttpVersion": "http2and3",
          "IPV6Enabled": false,
          "Logging": {
            "Bucket": {
              "Fn::GetAtt": [
                "LogsBucket9C4D8843",
                "RegionalDomainName",
              ],
            },
            "Prefix": "cf/prod/",
          },
          "OriginGroups": {
            "Items": [
              {
                "FailoverCriteria": {
                  "StatusCodes": {
                    "Items": [
                      403,
                      404,
                    ],
                    "Quantity": 2,
                  },
                },
                "Id": "SpsEdgeprodDistributionOriginGroup145A7C8F1",
                "Members": {
                  "Items": [
                    {
                      "OriginId": "SpsEdgeprodDistributionOrigin22E1F11C1",
                    },
                    {
                      "OriginId": "SpsEdgeprodDistributionOrigin13FA7C7AF",
                    },
                  ],
                  "Quantity": 2,
                },
              },
            ],
            "Quantity": 1,
          },
          "Origins": [
            {
              "CustomOriginConfig": {
                "HTTPPort": 80,
                "OriginProtocolPolicy": "http-only",
                "OriginSSLProtocols": [
                  "TLSv1.2",
                ],
              },
              "DomainName": {
                "Fn::ImportValue": "Sps-App-prod:ExportsOutputFnGetAttPublicAlb84330974DNSNameFA3FF7E9",
              },
              "Id": "SpsEdgeprodDistributionOrigin13FA7C7AF",
              "OriginCustomHeaders": [
                {
                  "HeaderName": "X-Origin-Verify",
                  "HeaderValue": "{{resolve:secretsmanager:scholars/prod/edge/origin-shared-secret:SecretString:::}}",
                },
              ],
            },
            {
              "DomainName": {
                "Fn::GetAtt": [
                  "StaticAssetsBucketC3095769",
                  "RegionalDomainName",
                ],
              },
              "Id": "SpsEdgeprodDistributionOrigin22E1F11C1",
              "OriginAccessControlId": {
                "Fn::GetAtt": [
                  "DistributionOrigin2S3OriginAccessControlDC470594",
                  "Id",
                ],
              },
              "S3OriginConfig": {
                "OriginAccessIdentity": "",
              },
            },
          ],
          "PriceClass": "PriceClass_100",
        },
      },
      "Type": "AWS::CloudFront::Distribution",
    },
    "DistributionMonitoringSubscription2503EB92": {
      "Properties": {
        "DistributionId": {
          "Ref": "Distribution830FAC52",
        },
        "MonitoringSubscription": {
          "RealtimeMetricsSubscriptionConfig": {
            "RealtimeMetricsSubscriptionStatus": "Enabled",
          },
        },
      },
      "Type": "AWS::CloudFront::MonitoringSubscription",
    },
    "DistributionOrigin2S3OriginAccessControlDC470594": {
      "Properties": {
        "OriginAccessControlConfig": {
          "Name": "SpsEdgeprodDistributionOrigin2S3OriginAccessControl50342575",
          "OriginAccessControlOriginType": "s3",
          "SigningBehavior": "always",
          "SigningProtocol": "sigv4",
        },
      },
      "Type": "AWS::CloudFront::OriginAccessControl",
    },
    "HtmlHeadersD748949D": {
      "Properties": {
        "ResponseHeadersPolicyConfig": {
          "Comment": "SPS HTML headers (prod) -- HSTS + no-store Cache-Control so HTML never outlives a deploy.",
          "CustomHeadersConfig": {
            "Items": [
              {
                "Header": "Cache-Control",
                "Override": true,
                "Value": "public, max-age=0, must-revalidate",
              },
            ],
          },
          "Name": "sps-html-headers-prod",
          "SecurityHeadersConfig": {
            "StrictTransportSecurity": {
              "AccessControlMaxAgeSec": 63072000,
              "IncludeSubdomains": true,
              "Override": true,
            },
          },
        },
      },
      "Type": "AWS::CloudFront::ResponseHeadersPolicy",
    },
    "InternalViewerOrp246E9A2E": {
      "Properties": {
        "OriginRequestPolicyConfig": {
          "Comment": "SPS internal-viewer (prod) -- ALL_VIEWER plus CloudFront-Viewer-Address (#866).",
          "CookiesConfig": {
            "CookieBehavior": "all",
          },
          "HeadersConfig": {
            "HeaderBehavior": "allViewerAndWhitelistCloudFront",
            "Headers": [
              "CloudFront-Viewer-Address",
            ],
          },
          "Name": "sps-internal-viewer-prod",
          "QueryStringsConfig": {
            "QueryStringBehavior": "all",
          },
        },
      },
      "Type": "AWS::CloudFront::OriginRequestPolicy",
    },
    "LogsBucket9C4D8843": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "BucketEncryption": {
          "ServerSideEncryptionConfiguration": [
            {
              "ServerSideEncryptionByDefault": {
                "SSEAlgorithm": "AES256",
              },
            },
          ],
        },
        "LifecycleConfiguration": {
          "Rules": [
            {
              "ExpirationInDays": 90,
              "Id": "sps-cf-logs-expire-prod",
              "Status": "Enabled",
            },
          ],
        },
        "OwnershipControls": {
          "Rules": [
            {
              "ObjectOwnership": "BucketOwnerPreferred",
            },
          ],
        },
        "PublicAccessBlockConfiguration": {
          "BlockPublicAcls": true,
          "BlockPublicPolicy": true,
          "IgnorePublicAcls": true,
          "RestrictPublicBuckets": true,
        },
      },
      "Type": "AWS::S3::Bucket",
      "UpdateReplacePolicy": "Retain",
    },
    "LogsBucketPolicyD70D9252": {
      "Properties": {
        "Bucket": {
          "Ref": "LogsBucket9C4D8843",
        },
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "s3:*",
              "Condition": {
                "Bool": {
                  "aws:SecureTransport": "false",
                },
              },
              "Effect": "Deny",
              "Principal": {
                "AWS": "*",
              },
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "LogsBucket9C4D8843",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "LogsBucket9C4D8843",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::S3::BucketPolicy",
    },
    "QueryKeyedCacheF5F61D4E": {
      "Properties": {
        "CachePolicyConfig": {
          "Comment": "SPS query-keyed cache (prod) -- per-query cache key, cookies stripped (#634).",
          "DefaultTTL": 86400,
          "MaxTTL": 31536000,
          "MinTTL": 1,
          "Name": "sps-query-keyed-prod",
          "ParametersInCacheKeyAndForwardedToOrigin": {
            "CookiesConfig": {
              "CookieBehavior": "none",
            },
            "EnableAcceptEncodingBrotli": true,
            "EnableAcceptEncodingGzip": true,
            "HeadersConfig": {
              "HeaderBehavior": "whitelist",
              "Headers": [
                "RSC",
                "Next-Router-Prefetch",
              ],
            },
            "QueryStringsConfig": {
              "QueryStringBehavior": "whitelist",
              "QueryStrings": [
                "mentees-sort",
                "page",
                "tab",
                "sort",
                "q",
                "role",
              ],
            },
          },
        },
      },
      "Type": "AWS::CloudFront::CachePolicy",
    },
    "SecurityHeadersE66B69D3": {
      "Properties": {
        "ResponseHeadersPolicyConfig": {
          "Comment": "SPS security headers (prod) -- HSTS only; B21 layers CSP/XFO.",
          "Name": "sps-security-headers-prod",
          "SecurityHeadersConfig": {
            "StrictTransportSecurity": {
              "AccessControlMaxAgeSec": 63072000,
              "IncludeSubdomains": true,
              "Override": true,
            },
          },
        },
      },
      "Type": "AWS::CloudFront::ResponseHeadersPolicy",
    },
    "StaticAssetsBucketC3095769": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "BucketEncryption": {
          "ServerSideEncryptionConfiguration": [
            {
              "ServerSideEncryptionByDefault": {
                "SSEAlgorithm": "AES256",
              },
            },
          ],
        },
        "LifecycleConfiguration": {
          "Rules": [
            {
              "ExpirationInDays": 14,
              "Id": "sps-static-assets-expire-prod",
              "Prefix": "_next/static/",
              "Status": "Enabled",
            },
          ],
        },
        "PublicAccessBlockConfiguration": {
          "BlockPublicAcls": true,
          "BlockPublicPolicy": true,
          "IgnorePublicAcls": true,
          "RestrictPublicBuckets": true,
        },
      },
      "Type": "AWS::S3::Bucket",
      "UpdateReplacePolicy": "Retain",
    },
    "StaticAssetsBucketPolicy3DFC5B6F": {
      "Properties": {
        "Bucket": {
          "Ref": "StaticAssetsBucketC3095769",
        },
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "s3:*",
              "Condition": {
                "Bool": {
                  "aws:SecureTransport": "false",
                },
              },
              "Effect": "Deny",
              "Principal": {
                "AWS": "*",
              },
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "StaticAssetsBucketC3095769",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "StaticAssetsBucketC3095769",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": "s3:PutObject",
              "Effect": "Allow",
              "Principal": {
                "AWS": {
                  "Fn::ImportValue": "Sps-App-prod:ExportsOutputFnGetAttDeployRole885297C3ArnF4D2225A",
                },
              },
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    {
                      "Fn::GetAtt": [
                        "StaticAssetsBucketC3095769",
                        "Arn",
                      ],
                    },
                    "/_next/static/*",
                  ],
                ],
              },
            },
            {
              "Action": [
                "s3:ListBucket",
                "s3:GetBucketLocation",
              ],
              "Effect": "Allow",
              "Principal": {
                "AWS": {
                  "Fn::ImportValue": "Sps-App-prod:ExportsOutputFnGetAttDeployRole885297C3ArnF4D2225A",
                },
              },
              "Resource": {
                "Fn::GetAtt": [
                  "StaticAssetsBucketC3095769",
                  "Arn",
                ],
              },
            },
            {
              "Action": "s3:GetObject",
              "Condition": {
                "StringEquals": {
                  "AWS:SourceArn": {
                    "Fn::Join": [
                      "",
                      [
                        "arn:",
                        {
                          "Ref": "AWS::Partition",
                        },
                        ":cloudfront::",
                        {
                          "Ref": "AWS::AccountId",
                        },
                        ":distribution/",
                        {
                          "Ref": "Distribution830FAC52",
                        },
                      ],
                    ],
                  },
                },
              },
              "Effect": "Allow",
              "Principal": {
                "Service": "cloudfront.amazonaws.com",
              },
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    {
                      "Fn::GetAtt": [
                        "StaticAssetsBucketC3095769",
                        "Arn",
                      ],
                    },
                    "/*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::S3::BucketPolicy",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`EdgeStack staging matches the snapshot 1`] = `
{
  "Outputs": {
    "DistributionDomainName": {
      "Description": "SPS CloudFront distribution domain (*.cloudfront.net)",
      "Value": {
        "Fn::GetAtt": [
          "Distribution830FAC52",
          "DomainName",
        ],
      },
    },
    "DistributionId": {
      "Description": "SPS CloudFront distribution id",
      "Value": {
        "Ref": "Distribution830FAC52",
      },
    },
    "LogsBucketName": {
      "Description": "SPS CloudFront access logs bucket",
      "Value": {
        "Ref": "LogsBucket9C4D8843",
      },
    },
    "StaticAssetsBucketName": {
      "Description": "SPS static-asset bucket (/_next/static/*) for additive deploy sync",
      "Value": {
        "Ref": "StaticAssetsBucketC3095769",
      },
    },
  },
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "DefaultRscCacheCFC4DDE6": {
      "Properties": {
        "CachePolicyConfig": {
          "Comment": "SPS default cache (staging) -- Managed-CachingOptimized plus RSC header keying so App Router soft navigation works.",
          "DefaultTTL": 60,
          "MaxTTL": 60,
          "MinTTL": 0,
          "Name": "sps-default-rsc-staging",
          "ParametersInCacheKeyAndForwardedToOrigin": {
            "CookiesConfig": {
              "CookieBehavior": "none",
            },
            "EnableAcceptEncodingBrotli": true,
            "EnableAcceptEncodingGzip": true,
            "HeadersConfig": {
              "HeaderBehavior": "whitelist",
              "Headers": [
                "RSC",
                "Next-Router-Prefetch",
              ],
            },
            "QueryStringsConfig": {
              "QueryStringBehavior": "none",
            },
          },
        },
      },
      "Type": "AWS::CloudFront::CachePolicy",
    },
    "Distribution830FAC52": {
      "Properties": {
        "DistributionConfig": {
          "CacheBehaviors": [
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
              ],
              "CachePolicyId": "658327ea-f89d-4fab-a63d-7e88639e58f6",
              "Compress": true,
              "PathPattern": "/_next/static/*",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgestagingDistributionOriginGroup1AF3D484D",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
                "PUT",
                "PATCH",
                "POST",
                "DELETE",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": "216adef6-5c7f-47e4-b989-5492eafa07d3",
              "PathPattern": "/api/edit*",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgestagingDistributionOrigin145B7DDC3",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
                "PUT",
                "PATCH",
                "POST",
                "DELETE",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": "216adef6-5c7f-47e4-b989-5492eafa07d3",
              "PathPattern": "/api/impersonation*",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgestagingDistributionOrigin145B7DDC3",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": "216adef6-5c7f-47e4-b989-5492eafa07d3",
              "PathPattern": "/edit*",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgestagingDistributionOrigin145B7DDC3",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
                "PUT",
                "PATCH",
                "POST",
                "DELETE",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": "216adef6-5c7f-47e4-b989-5492eafa07d3",
              "PathPattern": "/api/auth/*",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgestagingDistributionOrigin145B7DDC3",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
                "PUT",
                "PATCH",
                "POST",
                "DELETE",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": "216adef6-5c7f-47e4-b989-5492eafa07d3",
              "PathPattern": "/api/revalidate*",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgestagingDistributionOrigin145B7DDC3",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": "216adef6-5c7f-47e4-b989-5492eafa07d3",
              "PathPattern": "/api/health/*",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgestagingDistributionOrigin145B7DDC3",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
                "PUT",
                "PATCH",
                "POST",
                "DELETE",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": "216adef6-5c7f-47e4-b989-5492eafa07d3",
              "PathPattern": "/api/analytics",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgestagingDistributionOrigin145B7DDC3",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
                "PUT",
                "PATCH",
                "POST",
                "DELETE",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": {
                "Ref": "InternalViewerOrp246E9A2E",
              },
              "PathPattern": "/api/export/*",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgestagingDistributionOrigin145B7DDC3",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
                "PUT",
                "PATCH",
                "POST",
                "DELETE",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": "216adef6-5c7f-47e4-b989-5492eafa07d3",
              "PathPattern": "/api/csp-report",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgestagingDistributionOrigin145B7DDC3",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
                "PUT",
                "PATCH",
                "POST",
                "DELETE",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": "216adef6-5c7f-47e4-b989-5492eafa07d3",
              "PathPattern": "/api/nih-resolve",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgestagingDistributionOrigin145B7DDC3",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
                "PUT",
                "PATCH",
                "POST",
                "DELETE",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": "216adef6-5c7f-47e4-b989-5492eafa07d3",
              "PathPattern": "/api/feedback/submit",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgestagingDistributionOrigin145B7DDC3",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": "216adef6-5c7f-47e4-b989-5492eafa07d3",
              "PathPattern": "/api/search*",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgestagingDistributionOrigin145B7DDC3",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": "216adef6-5c7f-47e4-b989-5492eafa07d3",
              "PathPattern": "/search*",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgestagingDistributionOrigin145B7DDC3",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": "216adef6-5c7f-47e4-b989-5492eafa07d3",
              "PathPattern": "/api/directory/people",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgestagingDistributionOrigin145B7DDC3",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": "216adef6-5c7f-47e4-b989-5492eafa07d3",
              "PathPattern": "/api/nih-portfolio",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgestagingDistributionOrigin145B7DDC3",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": "216adef6-5c7f-47e4-b989-5492eafa07d3",
              "PathPattern": "/api/scholars/*/popover-context",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgestagingDistributionOrigin145B7DDC3",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": "216adef6-5c7f-47e4-b989-5492eafa07d3",
              "PathPattern": "/api/topics/*/publications",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgestagingDistributionOrigin145B7DDC3",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": "216adef6-5c7f-47e4-b989-5492eafa07d3",
              "PathPattern": "/api/methods/*/*/publications",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgestagingDistributionOrigin145B7DDC3",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": {
                "Ref": "InternalViewerOrp246E9A2E",
              },
              "PathPattern": "/api/profile/*",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgestagingDistributionOrigin145B7DDC3",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": "216adef6-5c7f-47e4-b989-5492eafa07d3",
              "PathPattern": "/about/feedback",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgestagingDistributionOrigin145B7DDC3",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": "216adef6-5c7f-47e4-b989-5492eafa07d3",
              "PathPattern": "/scholars/*/co-pubs/export",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgestagingDistributionOrigin145B7DDC3",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": "216adef6-5c7f-47e4-b989-5492eafa07d3",
              "PathPattern": "/scholars/*/co-pubs/*/export",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgestagingDistributionOrigin145B7DDC3",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
              ],
              "CachePolicyId": {
                "Ref": "QueryKeyedCacheF5F61D4E",
              },
              "Compress": true,
              "PathPattern": "/scholars/*",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgestagingDistributionOrigin145B7DDC3",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
              ],
              "CachePolicyId": {
                "Ref": "QueryKeyedCacheF5F61D4E",
              },
              "Compress": true,
              "PathPattern": "/departments/*",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgestagingDistributionOrigin145B7DDC3",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
              ],
              "CachePolicyId": {
                "Ref": "QueryKeyedCacheF5F61D4E",
              },
              "Compress": true,
              "PathPattern": "/centers/*",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgestagingDistributionOrigin145B7DDC3",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
              ],
              "CachePolicyId": {
                "Ref": "QueryKeyedCacheF5F61D4E",
              },
              "Compress": true,
              "PathPattern": "/topics/*/scholars",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgestagingDistributionOrigin145B7DDC3",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
              ],
              "CachePolicyId": {
                "Ref": "QueryKeyedCacheF5F61D4E",
              },
              "Compress": true,
              "PathPattern": "/methods/*/*/scholars",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgestagingDistributionOrigin145B7DDC3",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
          ],
          "Comment": "SPS edge -- staging",
          "CustomErrorResponses": [
            {
              "ErrorCachingMinTTL": 60,
              "ErrorCode": 404,
            },
            {
              "ErrorCachingMinTTL": 0,
              "ErrorCode": 500,
            },
            {
              "ErrorCachingMinTTL": 0,
              "ErrorCode": 502,
            },
            {
              "ErrorCachingMinTTL": 0,
              "ErrorCode": 503,
            },
            {
              "ErrorCachingMinTTL": 0,
              "ErrorCode": 504,
            },
          ],
          "DefaultCacheBehavior": {
            "AllowedMethods": [
              "GET",
              "HEAD",
              "OPTIONS",
            ],
            "CachePolicyId": {
              "Ref": "DefaultRscCacheCFC4DDE6",
            },
            "Compress": true,
            "ResponseHeadersPolicyId": {
              "Ref": "HtmlHeadersD748949D",
            },
            "TargetOriginId": "SpsEdgestagingDistributionOrigin145B7DDC3",
            "ViewerProtocolPolicy": "redirect-to-https",
          },
          "Enabled": true,
          "HttpVersion": "http2and3",
          "IPV6Enabled": false,
          "Logging": {
            "Bucket": {
              "Fn::GetAtt": [
                "LogsBucket9C4D8843",
                "RegionalDomainName",
              ],
            },
            "Prefix": "cf/staging/",
          },
          "OriginGroups": {
            "Items": [
              {
                "FailoverCriteria": {
                  "StatusCodes": {
                    "Items": [
                      403,
                      404,
                    ],
                    "Quantity": 2,
                  },
                },
                "Id": "SpsEdgestagingDistributionOriginGroup1AF3D484D",
                "Members": {
                  "Items": [
                    {
                      "OriginId": "SpsEdgestagingDistributionOrigin2DF9FA65F",
                    },
                    {
                      "OriginId": "SpsEdgestagingDistributionOrigin145B7DDC3",
                    },
                  ],
                  "Quantity": 2,
                },
              },
            ],
            "Quantity": 1,
          },
          "Origins": [
            {
              "CustomOriginConfig": {
                "HTTPPort": 80,
                "OriginProtocolPolicy": "http-only",
                "OriginSSLProtocols": [
                  "TLSv1.2",
                ],
              },
              "DomainName": {
                "Fn::ImportValue": "Sps-App-staging:ExportsOutputFnGetAttPublicAlb84330974DNSNameFA3FF7E9",
              },
              "Id": "SpsEdgestagingDistributionOrigin145B7DDC3",
              "OriginCustomHeaders": [
                {
                  "HeaderName": "X-Origin-Verify",
                  "HeaderValue": "{{resolve:secretsmanager:scholars/staging/edge/origin-shared-secret:SecretString:::}}",
                },
              ],
            },
            {
              "DomainName": {
                "Fn::GetAtt": [
                  "StaticAssetsBucketC3095769",
                  "RegionalDomainName",
                ],
              },
              "Id": "SpsEdgestagingDistributionOrigin2DF9FA65F",
              "OriginAccessControlId": {
                "Fn::GetAtt": [
                  "DistributionOrigin2S3OriginAccessControlDC470594",
                  "Id",
                ],
              },
              "S3OriginConfig": {
                "OriginAccessIdentity": "",
              },
            },
          ],
          "PriceClass": "PriceClass_100",
        },
      },
      "Type": "AWS::CloudFront::Distribution",
    },
    "DistributionMonitoringSubscription2503EB92": {
      "Properties": {
        "DistributionId": {
          "Ref": "Distribution830FAC52",
        },
        "MonitoringSubscription": {
          "RealtimeMetricsSubscriptionConfig": {
            "RealtimeMetricsSubscriptionStatus": "Enabled",
          },
        },
      },
      "Type": "AWS::CloudFront::MonitoringSubscription",
    },
    "DistributionOrigin2S3OriginAccessControlDC470594": {
      "Properties": {
        "OriginAccessControlConfig": {
          "Name": "SpsEdgestagingDistributionOrigin2S3OriginAccessControlC52F88B4",
          "OriginAccessControlOriginType": "s3",
          "SigningBehavior": "always",
          "SigningProtocol": "sigv4",
        },
      },
      "Type": "AWS::CloudFront::OriginAccessControl",
    },
    "HtmlHeadersD748949D": {
      "Properties": {
        "ResponseHeadersPolicyConfig": {
          "Comment": "SPS HTML headers (staging) -- HSTS + no-store Cache-Control so HTML never outlives a deploy.",
          "CustomHeadersConfig": {
            "Items": [
              {
                "Header": "Cache-Control",
                "Override": true,
                "Value": "public, max-age=0, must-revalidate",
              },
            ],
          },
          "Name": "sps-html-headers-staging",
          "SecurityHeadersConfig": {
            "StrictTransportSecurity": {
              "AccessControlMaxAgeSec": 63072000,
              "IncludeSubdomains": true,
              "Override": true,
            },
          },
        },
      },
      "Type": "AWS::CloudFront::ResponseHeadersPolicy",
    },
    "InternalViewerOrp246E9A2E": {
      "Properties": {
        "OriginRequestPolicyConfig": {
          "Comment": "SPS internal-viewer (staging) -- ALL_VIEWER plus CloudFront-Viewer-Address (#866).",
          "CookiesConfig": {
            "CookieBehavior": "all",
          },
          "HeadersConfig": {
            "HeaderBehavior": "allViewerAndWhitelistCloudFront",
            "Headers": [
              "CloudFront-Viewer-Address",
            ],
          },
          "Name": "sps-internal-viewer-staging",
          "QueryStringsConfig": {
            "QueryStringBehavior": "all",
          },
        },
      },
      "Type": "AWS::CloudFront::OriginRequestPolicy",
    },
    "LogsBucket9C4D8843": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "BucketEncryption": {
          "ServerSideEncryptionConfiguration": [
            {
              "ServerSideEncryptionByDefault": {
                "SSEAlgorithm": "AES256",
              },
            },
          ],
        },
        "LifecycleConfiguration": {
          "Rules": [
            {
              "ExpirationInDays": 90,
              "Id": "sps-cf-logs-expire-staging",
              "Status": "Enabled",
            },
          ],
        },
        "OwnershipControls": {
          "Rules": [
            {
              "ObjectOwnership": "BucketOwnerPreferred",
            },
          ],
        },
        "PublicAccessBlockConfiguration": {
          "BlockPublicAcls": true,
          "BlockPublicPolicy": true,
          "IgnorePublicAcls": true,
          "RestrictPublicBuckets": true,
        },
      },
      "Type": "AWS::S3::Bucket",
      "UpdateReplacePolicy": "Retain",
    },
    "LogsBucketPolicyD70D9252": {
      "Properties": {
        "Bucket": {
          "Ref": "LogsBucket9C4D8843",
        },
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "s3:*",
              "Condition": {
                "Bool": {
                  "aws:SecureTransport": "false",
                },
              },
              "Effect": "Deny",
              "Principal": {
                "AWS": "*",
              },
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "LogsBucket9C4D8843",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "LogsBucket9C4D8843",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::S3::BucketPolicy",
    },
    "QueryKeyedCacheF5F61D4E": {
      "Properties": {
        "CachePolicyConfig": {
          "Comment": "SPS query-keyed cache (staging) -- per-query cache key, cookies stripped (#634).",
          "DefaultTTL": 86400,
          "MaxTTL": 31536000,
          "MinTTL": 1,
          "Name": "sps-query-keyed-staging",
          "ParametersInCacheKeyAndForwardedToOrigin": {
            "CookiesConfig": {
              "CookieBehavior": "none",
            },
            "EnableAcceptEncodingBrotli": true,
            "EnableAcceptEncodingGzip": true,
            "HeadersConfig": {
              "HeaderBehavior": "whitelist",
              "Headers": [
                "RSC",
                "Next-Router-Prefetch",
              ],
            },
            "QueryStringsConfig": {
              "QueryStringBehavior": "whitelist",
              "QueryStrings": [
                "mentees-sort",
                "page",
                "tab",
                "sort",
                "q",
                "role",
              ],
            },
          },
        },
      },
      "Type": "AWS::CloudFront::CachePolicy",
    },
    "SecurityHeadersE66B69D3": {
      "Properties": {
        "ResponseHeadersPolicyConfig": {
          "Comment": "SPS security headers (staging) -- HSTS only; B21 layers CSP/XFO.",
          "Name": "sps-security-headers-staging",
          "SecurityHeadersConfig": {
            "StrictTransportSecurity": {
              "AccessControlMaxAgeSec": 63072000,
              "IncludeSubdomains": true,
              "Override": true,
            },
          },
        },
      },
      "Type": "AWS::CloudFront::ResponseHeadersPolicy",
    },
    "StaticAssetsBucketC3095769": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "BucketEncryption": {
          "ServerSideEncryptionConfiguration": [
            {
              "ServerSideEncryptionByDefault": {
                "SSEAlgorithm": "AES256",
              },
            },
          ],
        },
        "LifecycleConfiguration": {
          "Rules": [
            {
              "ExpirationInDays": 14,
              "Id": "sps-static-assets-expire-staging",
              "Prefix": "_next/static/",
              "Status": "Enabled",
            },
          ],
        },
        "PublicAccessBlockConfiguration": {
          "BlockPublicAcls": true,
          "BlockPublicPolicy": true,
          "IgnorePublicAcls": true,
          "RestrictPublicBuckets": true,
        },
      },
      "Type": "AWS::S3::Bucket",
      "UpdateReplacePolicy": "Retain",
    },
    "StaticAssetsBucketPolicy3DFC5B6F": {
      "Properties": {
        "Bucket": {
          "Ref": "StaticAssetsBucketC3095769",
        },
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "s3:*",
              "Condition": {
                "Bool": {
                  "aws:SecureTransport": "false",
                },
              },
              "Effect": "Deny",
              "Principal": {
                "AWS": "*",
              },
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "StaticAssetsBucketC3095769",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "StaticAssetsBucketC3095769",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": "s3:PutObject",
              "Effect": "Allow",
              "Principal": {
                "AWS": {
                  "Fn::ImportValue": "Sps-App-staging:ExportsOutputFnGetAttDeployRole885297C3ArnF4D2225A",
                },
              },
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    {
                      "Fn::GetAtt": [
                        "StaticAssetsBucketC3095769",
                        "Arn",
                      ],
                    },
                    "/_next/static/*",
                  ],
                ],
              },
            },
            {
              "Action": [
                "s3:ListBucket",
                "s3:GetBucketLocation",
              ],
              "Effect": "Allow",
              "Principal": {
                "AWS": {
                  "Fn::ImportValue": "Sps-App-staging:ExportsOutputFnGetAttDeployRole885297C3ArnF4D2225A",
                },
              },
              "Resource": {
                "Fn::GetAtt": [
                  "StaticAssetsBucketC3095769",
                  "Arn",
                ],
              },
            },
            {
              "Action": "s3:GetObject",
              "Condition": {
                "StringEquals": {
                  "AWS:SourceArn": {
                    "Fn::Join": [
                      "",
                      [
                        "arn:",
                        {
                          "Ref": "AWS::Partition",
                        },
                        ":cloudfront::",
                        {
                          "Ref": "AWS::AccountId",
                        },
                        ":distribution/",
                        {
                          "Ref": "Distribution830FAC52",
                        },
                      ],
                    ],
                  },
                },
              },
              "Effect": "Allow",
              "Principal": {
                "Service": "cloudfront.amazonaws.com",
              },
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    {
                      "Fn::GetAtt": [
                        "StaticAssetsBucketC3095769",
                        "Arn",
                      ],
                    },
                    "/*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::S3::BucketPolicy",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;
